# LegalAISGent

./: .gitignore  README.md  bts.jsonc  package.json
apps/web/: package.json
apps/web/migrations/: 001_create_document_chunks.sql
apps/web/prompts/: system-prompt.xml
apps/web/src/: routeTree.gen.ts  router.tsx
apps/web/src/components/: chat-list.tsx
apps/web/src/lib/: auth-client.ts
apps/web/src/middleware/: auth.ts
apps/web/src/routes/: __root.tsx  ai.tsx  index.tsx
apps/web/src/routes/api/ai/: $.ts
apps/web/src/routes/api/auth/: $.ts
apps/web/src/routes/api/chats/: $chatId.ts  index.ts
apps/web/src/routes/api/trpc/: $.ts
apps/web/src/utils/: trpc.ts
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  prompt_loader.py  schemas.py
backend/app/routes/: __init__.py  auth.py  chat.py  core.py
backend/drizzle/: drizzle.config.ts  package.json
backend/drizzle/src/schema/: index.ts
backend/legalaisgent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  package.json  vite.config.ts
frontend/src/: router.tsx
frontend/src/components/: sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
frontend/src/functions/: get-user.ts
frontend/src/lib/: api.ts  auth.ts  queryClient.ts
frontend/src/routes/: __root.tsx  ai.tsx  dashboard.tsx  index.tsx
qdrant/: qdrant.ipynb  qdrant.py
