[project]
name = "legalaisgent-backend"
version = "0.1.0"
description = "FastAPI backend for LegalAISGent"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.5,<1.0.0",
    "openai>=1.54.0,<2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.3,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true
app = "app.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
